# cargo-analyzer

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  deps.dot
src/: lib.rs  main.rs
src/analysis/: charts.rs  mod.rs  trends.rs
src/analysis/statistics/: documentation.rs  mod.rs  performance.rs  safety.rs  style.rs  warning.rs
src/fixes/: examples.rs  mod.rs  suggestions.rs  templates.rs
src/output/: color.rs  fix_plan.rs  formatter.rs  markdown.rs  mod.rs  report.rs
src/parser/: mod.rs  warning_parser.rs
src/runner/: analysis_runner.rs  mod.rs  workflow.rs
src/types/: categories.rs  mod.rs  priorities.rs  subcategories.rs  warnings.rs
