[package]
name = "cargo-analyzer"
version = "0.1.0"
edition = "2021"
description = "A detailed analyzer for Clippy warnings with categorized reports and fix suggestions"
authors = ["ndev"] 
license = "MIT OR Apache-2.0"  # Standard Rust licensing
repository = "https://github.com/ndev/cargo-analyzer"  # Update with your repo
documentation = "https://docs.rs/cargo-analyzer"
keywords = ["clippy", "analysis", "linter", "cargo-plugin", "static-analysis"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
csv.workspace = true
termcolor = "1.2"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-analyzer"
path = "src/main.rs"
